[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Objects/Spawner.gd" type="Script" id=1]
[ext_resource path="res://Assets/Objects/Spawner.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sound/Effects/Monsters/painb.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Launch"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.9, 1.99081 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.878431, 0.827451, 0.396078, 1 ), Color( 0.827451, 0, 0, 1 ), Color( 0.807843, 0.764706, 0.4, 1 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.08,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 1.9 )
}

[node name="Spawner" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.807843, 0.764706, 0.4, 1 )
texture = ExtResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Launch = SubResource( 1 )
[connection signal="all_waves_launched" from="." to="." method="_on_Spawner_all_waves_launched"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
